Geometry Nodes 3.4 crashes on viewing corners of wire mesh #101882

Closed
opened 2022-10-17 23:23:10 +02:00 by Serge Lyatin · 6 comments

System Information
Operating system: win10
Graphics card: 1050ti

Blender Version
Broken: 3.4 alpha

Short description of error

Exact steps for others to reproduce the error
gn_crash.jpg

  • Add GN tree to a default cube
  • Add Viewer node and connect nodes to it: Delete (only faces), Corners of Vertex
  • Switch Viewer mode from Auto to Point or Edge -> crash.
    gn_crash.blend
**System Information** Operating system: win10 Graphics card: 1050ti **Blender Version** Broken: 3.4 alpha **Short description of error** **Exact steps for others to reproduce the error** ![gn_crash.jpg](https://archive.blender.org/developer/F13700883/gn_crash.jpg) - Add GN tree to a default cube - Add Viewer node and connect nodes to it: Delete (only faces), Corners of Vertex - Switch Viewer mode from Auto to Point or Edge -> crash. [gn_crash.blend](https://archive.blender.org/developer/F13700885/gn_crash.blend)
Author

Added subscriber: @SergeL

Added subscriber: @SergeL
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2022-10-17 23:49:42 +02:00
Member

Thanks for the report!

Thanks for the report!

This issue was referenced by 161aa5e0d0

This issue was referenced by 161aa5e0d039577964d7080817e3df229aa153c0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101882
No description provided.